started adding client bits

--- a/module/Makefile.am
+++ b/module/Makefile.am
@@ -43,11 +43,12 @@ noinst_HEADERS = \
   nestReg.h \
   nestSetSpans.h \
   nestTrapezoids.h \
-  nestXv.h
+  nestXv.h \
+  nestXClient.h
 
 libxorgxnest_la_LTLIBRARIES = libxorgxnest.la
 
-libxorgxnest_la_LDFLAGS = -module -avoid-version
+libxorgxnest_la_LDFLAGS = -module -avoid-version -lX11
 
 libxorgxnest_ladir = $(moduledir)
 
@@ -58,7 +59,7 @@ nestFillPolygon.c nestPolyFillRect.c nestPolyFillArc.c nestPolyText8.c \
 nestPolyText16.c nestImageText8.c nestImageText16.c nestImageGlyphBlt.c \
 nestPolyGlyphBlt.c nestPushPixels.c nestCursor.c nestMain.c nestRandR.c \
 nestMisc.c nestReg.c nestComposite.c nestGlyphs.c nestPixmap.c nestInput.c \
-nestTrapezoids.c nestXv.c \
+nestTrapezoids.c nestXv.c nestXClient.c \
 $(EXTRA_SOURCES)
 
 libxorgxnest_la_LIBADD =
